issue-1: fixed header and is now responsive (header has been rewritten), also all html tags fixed and re-aligned in index.html. Scss and css edits and re-write to fix header changes.

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -27,12 +27,6 @@ h2 {
 	color: $primary-color;
 }
 
-.main-container {
-	background: white;
-	margin-top: 80px;
-	padding: 0 30px 30px 30px;
-}
-
 h2{
 	font-weight:700;
 	text-transform:uppercase;
@@ -43,25 +37,39 @@ h2{
 /**********************************
 Header:
 **********************************/
-#header-intro{
-	margin-top:-400px;
+
+.background-image{
+  background-image: url('../img/bangkok-nightlife.jpg');
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 500px;
+  margin: 0 auto;
+  padding-bottom: 50%;
+  position: relative;
+  z-index: -1;
+  margin-top: -180px;
 }
 
 .profile {
-	width:160;
-	display:block;
-	margin:auto;
-	margin-top: -200px;
+  margin-top: -150px;
+  margin-bottom: 50px;
+  margin-left:-15px;
 }
 
-header {
-	min-height: 100px;
+.person-image {
+	width:150;
+	display:block;
+	margin:auto;
+}
+
+.header {
+  margin-bottom: 50px;
 }
 
 header h1 {
 	padding: 20px 0 0 0;
 	font-size: 2.4em;
-	text-weight:700;
+	text-weight: bold;
 	text-transform:uppercase;
 	letter-spacing:-1px;
 	text-align:center;
@@ -81,11 +89,9 @@ header h2 {
 	margin-bottom: 50px;
 }
 
-.services-btn
-	width: 30;
-	display:block;
-	margin: 0 auto;
-	padding: 50px;
+.services-btn {
+    display: block;
+	margin: 80px auto;
 	text-align: center;
 }
 
